--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 <section>
     <div class="results">
         <h1><font color="red">Current</font> Search Results</h1>
+        <div class="resultx">
+        </div>
     </div>
 </section>
 
