--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/icon1.png">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/img/icon1.png">
+    <link rel="manifest" href="/manifest.json">
     <title>Weather App</title>
 </head>
 <body>
